--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <title>Odin-Landing-Page</title>
         <meta charset="utf-8">
     </head>
@@ -9,67 +12,69 @@
     <body>
 
         <div class="header">
+            <div class="headertxt">Header Logo</div>
             <div>
-                <div>Header Logo</div>
-                <div>
-                    <ul>
-                        <li><a>header link one</a></li>
-                        <li><a>header link two</a></li>
-                        <li><a>header link three</a></li>
-                    </ul>
+                <ul>
+                    <li><a class="header-link-txt">header link one</a></li>
+                    <li><a class="header-link-txt">header link two</a></li>
+                    <li><a class="header-link-txt">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="flex row-centered upper-back">
+            <div class="row-centered upper-con">
+                <div class="flex gap upper-div-txt">
+                    <div class="upper-con-maintxt">This website is awesome</div>
+                    <div class="upper-con-sectxt">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+                    <div><button class="button">Sign up</button></div>
+                </div>
+                <div class="img-con row-centered flex">
+                    <div>this is a placeholder for an image</div>
                 </div>
             </div>
         </div>
 
-        <div class="upper-con">
-            <div>
-                <div>This website is awesome</div>
-                <div>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
-                <div><button>Sign up</button></div>
-                <div>this is a placeholder for an image</div>
-            </div>
-        </div>
-
-        <div class="middle-con1">
-            <div>Some random information.</div>
-            <div>
-                <div>
-                    <div></div>
-                    <div>this is some subtext under an illustration or image</div>
+        <div class="middle-con1 col-centered flex">
+            <div class="middle-con1-txt">Some random information.</div>
+            <div class="middle-con1-img">
+                <div class="img-size col-centered gap">
+                    <div class="imgs"></div>
+                    <div class="middle-con1-img-txt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
-                    <div></div>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="img-size col-centered gap">
+                    <div class="imgs"></div>
+                    <div class="middle-con1-img-txt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
-                    <div></div>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="img-size col-centered gap">
+                    <div class="imgs"></div>
+                    <div class="middle-con1-img-txt">this is some subtext under an illustration or image</div>
                 </div>
-                <div>
-                    <div></div>
-                    <div>this is some subtext under an illustration or image</div>
+                <div class="img-size col-centered gap">
+                    <div class="imgs"></div>
+                    <div class="middle-con1-img-txt">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
         
-        <div class="middle-con2">
-            <div>
-                <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-                <div>-Thor, God of Thunder</div>
+        <div class="middle-con2 row-centered flex">
+            <div class="middle-con2-content">
+                <div class="middle-con2-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="quote">-Thor, God of Thunder</div>
             </div>
         </div>
 
-        <div class="lower-con">
-            <div>
+        <div class="flex row-centered">
+            <div class="lower-con-div row-centered">
                 <div>
-                    <div>Call to action! It's time!</div>
-                    <div>Sign up for our product by clicking that button right over there!</div>
+                    <div class="lower-con-txt">Call to action! It's time!</div>
+                    <div class="lower-con-subtxt">Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <div><button>Sign up</button></div>
+                <div><button class="lower-con-button button">Sign up</button></div>
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer row-centered">
             <div>Copyright @ The Odin Project 2021</div>
         </div>
 
