finalized html and css

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 
     <body>
 
-        <div class="header">
-            <div class="headertxt">Header Logo</div>
-            <div>
-                <ul>
-                    <li><a class="header-link-txt">header link one</a></li>
-                    <li><a class="header-link-txt">header link two</a></li>
-                    <li><a class="header-link-txt">header link three</a></li>
-                </ul>
+        <div class="header-back">
+            <div class="margin header">
+                <div class="headertxt">Header Logo</div>
+                <div>
+                    <ul>
+                        <li><a class="header-link-txt">header link one</a></li>
+                        <li><a class="header-link-txt">header link two</a></li>
+                        <li><a class="header-link-txt">header link three</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
         <div class="flex row-centered upper-back">
-            <div class="row-centered upper-con">
+            <div class="row-centered upper-con margin">
                 <div class="flex gap upper-div-txt">
                     <div class="upper-con-maintxt">This website is awesome</div>
-                    <div class="upper-con-sectxt">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+                    <div class="upper-con-sectxt">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     <div><button class="button">Sign up</button></div>
                 </div>
                 <div class="img-con row-centered flex">
@@ -58,14 +60,14 @@
         </div>
         
         <div class="middle-con2 row-centered flex">
-            <div class="middle-con2-content">
+            <div class="middle-con2-content margin-quote">
                 <div class="middle-con2-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
                 <div class="quote">-Thor, God of Thunder</div>
             </div>
         </div>
 
         <div class="flex row-centered">
-            <div class="lower-con-div row-centered">
+            <div class="lower-con-div row-centered margin flex">
                 <div>
                     <div class="lower-con-txt">Call to action! It's time!</div>
                     <div class="lower-con-subtxt">Sign up for our product by clicking that button right over there!</div>
